nl **************************************************************
dnl Process this file with autoconf to produce a configure script.
dnl **************************************************************

AC_PREREQ(2.50)
AC_INIT(README)
AC_CONFIG_AUX_DIR(.)

dnl Detect the canonical host and target build environment
AC_CANONICAL_HOST
AC_CANONICAL_TARGET
AC_CONFIG_MACRO_DIR([m4])

AM_INIT_AUTOMAKE(adonthell-tools, 0.4.0-alpha-1)
AM_CONFIG_HEADER(config.h)

CXXFLAGS="-g -Wall -fno-exceptions"

dnl ********************
dnl Checks for programs.
dnl ********************

AC_PROG_LN_S
AC_PROG_CXX
AC_PROG_CXXCPP
AC_PROG_MAKE_SET
AC_PROG_RANLIB

dnl ****
dnl i18n
dnl ****

AM_GNU_GETTEXT([external])


dnl *********
dnl Endianess
dnl *********

AC_C_BIGENDIAN(CXXFLAGS="$CXXFLAGS -DBIG_ENDIAN", :, :)


dnl *******
dnl libtool
dnl *******

AC_LIBTOOL_DLOPEN
AC_LIBTOOL_WIN32_DLL
AC_PROG_LIBTOOL
AC_CHECK_LIB(ltdl, lt_dlinit,,echo "Adonthell requires libltdl. Exitting...";exit 1)


dnl ********************
dnl Additional arguments
dnl ********************
AC_ARG_WITH(py-libs,
[  --with-py-libs=DIR     Override Python libraries auto-detection],
            pylibs="$withval", pylibs=none)
AC_ARG_WITH(py-cflags,
[  --with-py-cflags=DIR   Override Python cflags auto-detection],
            pycflags="$withval", pycflags=none)


dnl *****************
dnl Adonthell
dnl *****************

PKG_CHECK_MODULES(ADONTHELL, [adonthell >= 0.4.0])
AC_SUBST(ADONTHELL_CFLAGS)
AC_SUBST(ADONTHELL_LIBS)

ADONTHELL_DATADIR=`pkg-config --variable=datadir adonthell`
ADONTHELL_BACKEND=`pkg-config --variable=libdir adonthell`
CXXFLAGS="$CXXFLAGS -DDATA_DIR=\\\"$ADONTHELL_DATADIR\\\""
AC_SUBST(ADONTHELL_BACKEND)


dnl *****************
dnl Cairo
dnl *****************

PKG_CHECK_MODULES(CAIRO, [cairo >= 1.2.6])
AC_SUBST(CAIRO_CFLAGS)
AC_SUBST(CAIRO_LIBS)


dnl *****************
dnl GTK+
dnl *****************

PKG_CHECK_MODULES(GTK, [gtk+-2.0 >= 2.6.0])
AC_SUBST(GTK_CFLAGS)
AC_SUBST(GTK_LIBS)


dnl *****************
dnl Check for libxml2
dnl *****************
XML_VERSION=2.5.0
AM_PATH_XML2($XML_VERSION,
    :,
    AC_MSG_ERROR([*** libxml version >= $XML_VERSION not found!])
)


dnl ****************
dnl Check for Python
dnl ****************
AM_PATH_PYTHON([2.0])

dnl convert windows paths to cygwin paths
case "$target" in
	*-*-cygwin* | *-*-mingw32*)
		pyexecdir=`cd $pyexecdir && pwd`
		pythondir=`cd $pythondir && pwd`
	;;
esac

   dnl Find the Python.h header file

if test "x$pycflags" = xnone; then
   AC_MSG_CHECKING(for Python header files)
   changequote(<<, >>)
   PYINCLUDE=`$PYTHON -c 'import sys ; print "%s/include/python%s" % (sys.prefix, sys.version[:3])'`
   changequote([, ])
   PYINCLUDE=`echo "$PYINCLUDE" | sed 's/\\\/\//g'`
   
   if test -r "$PYINCLUDE/Python.h"; then
      PY_CFLAGS="-I$PYINCLUDE"
      AC_SUBST(PY_CFLAGS)
   else
      AC_MSG_ERROR([Could not find Python.h in $PYINCLUDE])
   fi
   AC_MSG_RESULT(found)
else
   PY_CFLAGS=${pycflags}
   AC_MSG_CHECKING(for Python cflags)
   AC_MSG_RESULT($PY_CFLAGS)
   AC_SUBST(PY_CFLAGS)
fi

   dnl Find the Python library

if test "x$pylibs" = xnone; then
   AC_MSG_CHECKING(for Python library)
   PYLIB=""
   changequote(<<, >>)
   PYPREFIX=`$PYTHON -c 'import sys; print sys.prefix'`
   PYLIBVER=`$PYTHON -c 'import sys; print sys.version[:3]'`
   changequote([, ])

   dnl look for a framework build of python first
   fw=`echo "$PYPREFIX" | sed 's/.*\(Python\.framework\).*/\1/;'`
   if test "x$fw" != x$PYPREFIX; then
       PY_LIBS="-framework Python"
       PY_FWDIR="$PYPREFIX/lib/python$PYLIBVER/site-packages"
       PY_SPDIR="$libdir/python$PYLIBVER/site-packages"
       AC_SUBST(PY_FWDIR)
       AC_SUBST(PY_SPDIR)
       AC_MSG_RESULT(found)
   else
       py_paths="$PYPREFIX/lib64/python$PYLIBVER/config $PYPREFIX/lib64 \
	$PYPREFIX/lib/python$PYLIBVER/config $PYPREFIX/lib"

       dnl Try for specific version first, then the generic version, then panic

       for ppath in $py_paths ; do
           if test -r "$ppath/libpython$PYLIBVER.so" -o \
               -r "$ppath/libpython$PYLIBVER.a"; then
               PYLIB="-L$ppath -lpython$PYLIBVER"
               break
           fi
           if test -r "$ppath/libpython.so" -o \
                   -r "$ppath/libpython.a"; then
               PYLIB="-L$ppath -lpython"
               break
           fi
       done

       if test "x$PYLIB" != x ; then
           PY_LIBS="$PYLIB $PY_LIBS"
           AC_MSG_RESULT(found)
       else
           AC_MSG_ERROR([*** Python library not found])
       fi
   fi

   dnl Get the libraries that a static python library depends on
   AC_MSG_CHECKING(for Python's dependencies)

   py_extradeps=`$PYTHON -c 'import distutils.sysconfig; print distutils.sysconfig.get_config_var("LIBS")'`
   py_sysextradeps=`$PYTHON -c 'import distutils.sysconfig; print distutils.sysconfig.get_config_var("SYSLIBS")'`

   PY_DEPS="$py_extradeps $py_sysextradeps"

   AC_MSG_RESULT($PY_DEPS)

   dnl only GNU ld seems to know -E flag
   if $LD -v 2>&1 </dev/null | egrep '(GNU|with BFD)' 1>&5; then
       PY_LIBS="-Wl,-E $PY_LIBS $PY_DEPS"
   else
       PY_LIBS="$PY_LIBS $PY_DEPS"
   fi
   AC_SUBST(PY_LIBS)

else
   PY_LIBS=${pylibs}
   AC_MSG_CHECKING(for Python ld flags)
   AC_MSG_RESULT($PY_LIBS)
   AC_SUBST(PY_LIBS)
fi

AM_CONDITIONAL(PY_FRAMEWORK, test x$fw != x$PYPREFIX)


AC_OUTPUT([ 
Makefile
src/Makefile
src/backend/Makefile
src/common/Makefile
src/dlgedit/Makefile
src/mapedit/Makefile
src/questedit/Makefile
test/Makefile
])
