## Process this file with automake to produce Makefile.in

noinst_LIBRARIES = libcommon.a

noinst_HEADERS = \
    gui_file.h \
    gui_modal_dialog.h \
    gui_scrollable.h

libcommon_a_SOURCES = \
    gui_file.cc \
    gui_modal_dialog.cc \
    gui_scrollable.cc

libcommon_a_CXXFLAGS = $(GTK_CFLAGS)
