## Process this file with automake to produce Makefile.in

noinst_LIBRARIES = libcommon.a

noinst_HEADERS = \
    gui_file.h \
    gui_modal_dialog.h \
    gui_scrollable.h \
    util.h

libcommon_a_SOURCES = \
    gui_file.cc \
    gui_modal_dialog.cc \
    gui_scrollable.cc \
    util.cc

libcommon_a_CXXFLAGS = $(ADONTHELL_CFLAGS) $(GTK_CFLAGS)
